--- a/etc/scss/common/partials/_normalize.scss
+++ b/etc/scss/common/partials/_normalize.scss
@@ -58,7 +58,7 @@ a:hover{
 
 body, textarea, input, select, textarea, button {
     font-family: $roboto-thin;
-    color: $color-white;
+    color: $color-default;
     line-height: 1.32;
 }
 
