--- a/dev/components/project-popup/scss/partials/_global.scss
+++ b/dev/components/project-popup/scss/partials/_global.scss
@@ -1,6 +1,4 @@
 .#{$component-name} {
-    overflow-x: hidden;
-    overflow-y: auto;
     position: fixed;
     top: 0;
     right: 0;
@@ -8,10 +6,16 @@
     bottom: 0;
     z-index: 9999;
     width: 100%;
-    @include vw-convert-pc(padding, 40 0);
     background-color: rgba(255, 255, 255,0.98);
     color: $color-black;
     box-sizing: border-box;
+    &__wrap {
+        overflow-x: hidden;
+        overflow-y: auto;
+        height: 100%;
+        @include vw-convert-pc(padding, 40 0);
+        box-sizing: border-box;
+    }
     &__inner {
         max-width: 1440px;
         margin: 0 auto;
