--- a/dev/components/project-popup/scss/partials/_global.scss
+++ b/dev/components/project-popup/scss/partials/_global.scss
@@ -6,7 +6,7 @@
     bottom: 0;
     z-index: 9999;
     width: 100%;
-    background-color: rgba(255, 255, 255,0.98);
+    background-color: $color-white;
     color: $color-black;
     box-sizing: border-box;
     &__wrap {
